Fixed ball shift issue

--- a/src/components/cards/timeline.css
+++ b/src/components/cards/timeline.css
@@ -12,12 +12,12 @@
   transition: width 2s;
 }
 
-.jss17, .PrivateValueLabel-circle-17 {
+.jss33, .PrivateValueLabel-circle-33 {
   width: 80px;
   height: 80px;
   transform: rotate(-45deg) translate(21px, -53px);
 }
 
-.jss22, .PrivateValueLabel-label-22 {
+.jss34, .PrivateValueLabel-label-34 {
   text-align: center;
 }
